# kellerkompanie-ts3bot

./: .gitignore  .gitmodules  README.md  database.py  default_guest_welcome_message.txt  guest_welcome_message.txt  keko_bot.py  pyproject.toml  requirements.txt
configs/: database_config.json  keko-ts3bot.yaml  keko_bot.json
debian/: changelog  control  install  keko-ts3bot.service  postinst  postrm  prerm  rules
docker/: build.Dockerfile
keko/ts3api/: __init__.py  connection.py  events.py  exceptions.py  protocol.py  types.py
keko/ts3bot/: config.py  database.py  keko_bot.py  main.py  model.py
scripts/: build_deb.py  deploy_deb.py
ts3API/: Events.py  TS3Connection.py  __init__.py
