[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kellerkompanie-ts3bot"
version = "1.0.0"
description = "TeamSpeak 3 bot for Kellerkompanie"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.6.3",
    "mariadb>=1.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
keko-bot = "keko_bot:main"

[tool.setuptools.packages.find]
include = ["ts3API*"]
